--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <p id="serif">Build secure cloud applications using a portfolio of cloud services powered by IBM LinuxONE.</p>
 
 	<div id="videos">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/L0h3bewzR8s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/L0h3bewzR8s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
 	</div>
 
         <div id="more-videos">
