Add blogs and podcasts titles

--- a/index.html
+++ b/index.html
@@ -27,16 +27,24 @@
             </div>
 	</div>
 
-        <div id="more-videos">
+        <div id="collateral">
+
+            <h2>Blogs</h2>
+
             <ul>
                 {% for link in site.data.blogs %}
                 <li><a href="{{ link.url }}">{{ link.title }}</a></li>
                 {% endfor %}
+            </ul>
 
+            <h2>Podcasts</h2>
+
+            <ul>
                 {% for link in site.data.podcasts %}
                 <li><a href="{{ link.url }}">{{ link.title }}</a></li>
                 {% endfor %}
             </ul>
+
         </div>
 
 
