Incorporate some of Tim's suggestions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div id="title">
-	<h1>IBM Cloud Hyper Protect Services</h1>
+	<h1><span>IBM Cloud</span> Hyper Protect Services</h1>
 	<span>Fast Start</span>
     </div>
 
@@ -67,7 +67,7 @@
             {% endfor %}
         </ul>
 
-	<h2>DTE Videos</h2>
+	<h2>Videos</h2>
 
         <h3>Crypto Service</h3>
         <ul>
