--- a/fss.html
+++ b/fss.html
@@ -36,6 +36,7 @@
                 {% for link in site.data.blogs %}
                 {% if link.offering contains "fss" %}
                 <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+                {% endif %}
                 {% endfor %}
             </ul>
 
@@ -45,6 +46,7 @@
                 {% for link in site.data.podcasts %}
                 {% if link.offering contains "fss" %}
                 <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+                {% endif %}
                 {% endfor %}
             </ul>
 
@@ -60,6 +62,7 @@
             {% for link in site.data.tutorials %}
             {% if link.offering contains "fss" %}
             <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+            {% endif %}
             {% endfor %}
         </ul>
 
@@ -68,6 +71,7 @@
             {% for link in site.data.code-patterns %}
             {% if link.offering contains "fss" %}
             <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+            {% endif %}
             {% endfor %}
         </ul>
 
@@ -87,6 +91,7 @@
             {% for link in site.data.tech-talks %}
             {% if link.offering contains "fss" %}
             <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+            {% endif %}
             {% endfor %}
         </ul>
 
