Remove "fast start" conference name in header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="title">
 	<h1><span>IBM Cloud</span> Hyper Protect Services</h1>
-	<span>Fast Start</span>
+	<span><!-- Fast Start --></span>
     </div>
 
     <div id="content">
