--- a/pdfs-ppts-books.html
+++ b/pdfs-ppts-books.html
@@ -71,7 +71,7 @@
         {% endfor %}
 
         {% for link in site.data.pdfs %}
-        <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+        <li><a href="{{ link.pdffile }}">{{ link.title }}</a></li>
         {% endfor %}
     </ul>
   </div>
